--- a/index.html
+++ b/index.html
@@ -10,23 +10,35 @@
   </head>
   <body>
     <div class="container">
-
-      <!-- Static navbar -->
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">Crowdsourcing Law and Policy</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-
+      <div class="row">
+        <div class="col-md-8 col-offset-md-2">
+          <h1>Crowdsourcing Law and Policy</h1>
+          <h2>A Design-Thinking Approach to Crowd-Civic Systems</h2>
+          <p>We invite you to join a Computer Supported Cooperative Work (CSCW) 2017 Workshop 
+            designed to explore the risks and evaluation strategies for crowdsourcing law and policy. Crowdsourcing 
+            technologies, strategies and methods offer new opportunities for bridging existing gaps among law, policymaking, 
+            and the lived experience of citizens. In recent years, a number of initiatives across the world have applied 
+            crowdsourcing to contexts including constitutional reform, drafting federal bills, and generating local policies. 
+            However, crowd-civic systems also come with challenges and risks such as socio-technical barriers, marginalization 
+            of specific groups, silencing of interests, etc. Using a design-thinking approach, this workshop will address both 
+            opportunities and challenges of crowd-civic systems to develop best practices for increasing public engagement with 
+            law and policy. The workshop organizers will suggest an initial framework explicitly intended to be criticized by 
+            participants and reconfigured through a series of iterative cooperative small-group activities focusing on 
+            ``diagnosing'' the failures of past crowd-civic system efforts and the successes of online action around social 
+            issues. While the ultimate objective of the workshop is to develop a best practices guide, we see iterations on 
+            the guide as a mechanism for fostering community and collaboration among policymakers, technologists, and researchers 
+            around crowd-civic systems for law and policy.</p>
+          <h3>Relevant links:</h3>
+          <ul>
+            <li><a href="#apply" target="_blank">Participate in the Crowdsourcing Law and Policy Workshop</a></li>
+            <li><a href="" target="_blank">Download the workshop proposal</a></li>            
+            <li><a href="https://cscw.acm.org/2017/" target="_blank">Information about CSCW 2017</a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="apply" class="row">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfazgUPiLPMJgnPiY4WDW0uFGBdaeJO6SdYkIufnq9ULvSFbg/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      </div>
     </div>
   </body>
 </html>
