--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="col-md-8 col-offset-md-2">
           <h1>Crowdsourcing Law and Policy</h1>
           <h2>A Design-Thinking Approach to Crowd-Civic Systems</h2>
-          <p>We invite you to join a Computer Supported Cooperative Work (CSCW) 2017 Workshop 
+          <p>We invite you to <a href="#apply">participate</a> in a Computer Supported Cooperative Work (CSCW) 2017 Workshop 
             designed to explore the risks and evaluation strategies for crowdsourcing law and policy. Crowdsourcing 
             technologies, strategies and methods offer new opportunities for bridging existing gaps among law, policymaking, 
             and the lived experience of citizens. In recent years, a number of initiatives across the world have applied 
@@ -30,7 +30,7 @@
             around crowd-civic systems for law and policy.</p>
           <h3>Relevant links:</h3>
           <ul>
-            <li><a href="#apply" target="_blank">Participate in the Crowdsourcing Law and Policy Workshop</a></li>
+            <li><a href="#apply">Participate in the Crowdsourcing Law and Policy Workshop</a></li>
             <li><a href="" target="_blank">Download the workshop proposal</a></li>            
             <li><a href="https://cscw.acm.org/2017/" target="_blank">Information about CSCW 2017</a></li>
           </ul>
