--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>Relevant links:</h3>
           <ul>
             <li><a href="#apply">Participate in the Crowdsourcing Law and Policy Workshop</a></li>
-            <li><a href="" target="_blank">Download the workshop proposal</a></li>            
+            <li><a href="https://CrowdCivicSystems.github.io/CSCW2017WS-CrowdCivicSystems.pdf" target="_blank">Download the workshop proposal</a></li>            
             <li><a href="https://cscw.acm.org/2017/" target="_blank">Information about CSCW 2017</a></li>
           </ul>
         </div>
