--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-offset-md-2">
-          <h1>Crowdsourcing Law and Policy</h1>
-          <h2>A Design-Thinking Approach to Crowd-Civic Systems</h2>
+        <div class="col-md-10 col-offset-md-1">
+          <h1>Crowdsourcing Law and Policy: <small>A Design-Thinking Approach to Crowd-Civic Systems</small></h1>
           <p>We invite you to <a href="#apply">participate</a> in a Computer Supported Cooperative Work (CSCW) 2017 Workshop 
             designed to explore the risks and evaluation strategies for crowdsourcing law and policy. Crowdsourcing 
             technologies, strategies and methods offer new opportunities for bridging existing gaps among law, policymaking, 
             and the lived experience of citizens. In recent years, a number of initiatives across the world have applied 
             crowdsourcing to contexts including constitutional reform, drafting federal bills, and generating local policies. 
             However, crowd-civic systems also come with challenges and risks such as socio-technical barriers, marginalization 
-            of specific groups, silencing of interests, etc. Using a design-thinking approach, this workshop will address both 
+            of specific groups, silencing of interests, etc.</p>
+          <p>Using a design-thinking approach, this workshop will address both 
             opportunities and challenges of crowd-civic systems to develop best practices for increasing public engagement with 
             law and policy. The workshop organizers will suggest an initial framework explicitly intended to be criticized by 
             participants and reconfigured through a series of iterative cooperative small-group activities focusing on 
@@ -30,10 +30,36 @@
             around crowd-civic systems for law and policy.</p>
           <h3>Relevant links:</h3>
           <ul>
-            <li><a href="#apply">Participate in the Crowdsourcing Law and Policy Workshop</a></li>
+            <li><a href="#apply"><b>Apply</b>: Participate in the Crowdsourcing Law and Policy Workshop</a></li>
             <li><a href="https://CrowdCivicSystems.github.io/CSCW2017WS-CrowdCivicSystems.pdf" target="_blank">Download the workshop proposal</a></li>            
-            <li><a href="https://cscw.acm.org/2017/" target="_blank">Information about CSCW 2017</a></li>
+            <li><a href="https://cscw.acm.org/2017/" target="_blank">About CSCW 2017</a></li>
           </ul>
+        </div>
+      </div>
+      <div id="motivation" class="row">
+        <div class="col-md-10 col-offset-md-1">
+          <h2>Workshop Motivation</h2>
+          <p>
+            In this workshop our focus is on crowd-civic systems that inform the policy-making process, when the policy itself is 
+            still ripe for change and input. The experience of existing systems raises several important questions about how 
+            crowdsourcing could be used as a tool for civic engagement in this context.
+          </p>
+          <h4>Critical questions</h4>
+          <ul>
+            <li>Whose views are prioritized?</li>
+            <li>How could policymakers and participants use the results of a crowd-civic system?</li>
+            <li>How can we compare the performance of various crowd-civic systems?</li>
+            <li>When is it not recommended to crowdsource law and policy?</li>
+            <li>What can emerging online collective action teach us about crowd-civic system design?</li>
+            <li>How might we use hypotheticals and futuring exercises to generate insights into the promise and perils of crowd-civic systems design?</li>
+            <li>What socio-technical factors, barriers and risks should policymakers and designers consider as we move toward a wider adoption of crowd-civic systems?</li>            
+          </ul>
+          <h4>Development of a best practices guidebook</h4>
+          <p>The workshop seeks to address some of these questions by gathering a diverse group of participants, with a broad range
+            of perspectives, to work collaboratively toward the future of crowd-civic systems for policy and law.  We will do so by
+            developing a best practices guide for crowd-civic system design and research, drawing from both the public and private
+            spheres, in an effort to promote crowdsourcing as an adaptive, viable, robust, and reliable tool for civic engagement.
+          </p>
         </div>
       </div>
       <div id="apply" class="row">
