--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
             around crowd-civic systems for law and policy.</p>
           <h3>Relevant links:</h3>
           <ul>
-            <li><a href="#apply"><b>Apply</b>: Participate in the Crowdsourcing Law and Policy Workshop</a></li>
+            <li><a href="#apply">Apply to participate in the Crowdsourcing Law and Policy Workshop</a></li>
             <li><a href="https://CrowdCivicSystems.github.io/CSCW2017WS-CrowdCivicSystems.pdf" target="_blank">Download the workshop proposal</a></li>            
             <li><a href="https://cscw.acm.org/2017/" target="_blank">About CSCW 2017</a></li>
           </ul>
+          <center>
+            <button type="button" class="btn btn-success btn-lg">Participate</button>
+          </center>
         </div>
       </div>
       <div id="motivation" class="row">
