--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="https://cscw.acm.org/2017/" target="_blank">About CSCW 2017</a></li>
           </ul>
           <center>
-            <button type="button" class="btn btn-success btn-lg">Participate</button>
+            <a href="#apply" role="button" class="btn btn-success btn-lg">Participate</a>
           </center>
         </div>
       </div>
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div id="apply" class="row">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfazgUPiLPMJgnPiY4WDW0uFGBdaeJO6SdYkIufnq9ULvSFbg/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfazgUPiLPMJgnPiY4WDW0uFGBdaeJO6SdYkIufnq9ULvSFbg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       </div>
     </div>
   </body>
