--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
             <li><a href="https://CrowdCivicSystems.github.io/CSCW2017WS-CrowdCivicSystems.pdf" target="_blank">Download the workshop proposal</a></li>            
             <li><a href="https://cscw.acm.org/2017/" target="_blank">About CSCW 2017</a></li>
           </ul>
-          <center>
-            <a href="#apply" role="button" class="btn btn-success btn-lg">Participate</a>
-          </center>
         </div>
       </div>
       <div id="motivation" class="row">
@@ -66,7 +63,10 @@
         </div>
       </div>
       <div id="apply" class="row">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfazgUPiLPMJgnPiY4WDW0uFGBdaeJO6SdYkIufnq9ULvSFbg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <div class="col-md-10 col-offset-md-1">
+          <h2>Apply to participate in the workshop</h2>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfazgUPiLPMJgnPiY4WDW0uFGBdaeJO6SdYkIufnq9ULvSFbg/viewform?embedded=true" width="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>      
       </div>
     </div>
   </body>
