--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div id="apply" class="row">
         <div class="col-md-10 col-offset-md-1">
           <h2>Apply to participate in the workshop</h2>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfazgUPiLPMJgnPiY4WDW0uFGBdaeJO6SdYkIufnq9ULvSFbg/viewform?embedded=true" width="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfazgUPiLPMJgnPiY4WDW0uFGBdaeJO6SdYkIufnq9ULvSFbg/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>      
       </div>
     </div>
