--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col-md-10 col-offset-md-1">
           <h1>Crowdsourcing Law and Policy: <small>A Design-Thinking Approach to Crowd-Civic Systems</small></h1>
-          <p>We invite you to <a href="#apply">participate</a> in a Computer Supported Cooperative Work (CSCW) 2017 Workshop 
+          <p>We invite you to <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1">participate</a></mark> in a Computer Supported Cooperative Work (CSCW) 2017 Workshop 
             designed to explore the risks and evaluation strategies for crowdsourcing law and policy. Crowdsourcing 
             technologies, strategies and methods offer new opportunities for bridging existing gaps among law, policymaking, 
             and the lived experience of citizens. In recent years, a number of initiatives across the world have applied 
@@ -30,7 +30,7 @@
             around crowd-civic systems for law and policy.</p>
           <h3>Relevant links:</h3>
           <ul>
-            <li><a href="#apply">Apply to participate in the Crowdsourcing Law and Policy Workshop</a></li>
+            <li><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1">Apply to participate in the Crowdsourcing Law and Policy Workshop</a></li>
             <li><a href="https://CrowdCivicSystems.github.io/CSCW2017WS-CrowdCivicSystems.pdf" target="_blank">Download the workshop proposal</a></li>            
             <li><a href="https://cscw.acm.org/2017/" target="_blank">About CSCW 2017</a></li>
           </ul>
@@ -65,7 +65,9 @@
       <div id="apply" class="row">
         <div class="col-md-10 col-offset-md-1">
           <h2>Apply to participate in the workshop</h2>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfazgUPiLPMJgnPiY4WDW0uFGBdaeJO6SdYkIufnq9ULvSFbg/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+          <h4>1. Complete the application <a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1">form</a></h4>
+          <h4>2. Upload your short essay (1000 words or less) to <a href="https://www.dropbox.com/request/eYwWguObpUo9SSRywAol">Dropbox</a></h4>
+          <h2>You will be notified about your acceptance to the workshop on December 20th</h4>          
         </div>      
       </div>
     </div>
