--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
           <h2>Apply to participate in the workshop</h2>
           <h4>1. Complete the application <a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1">form</a></h4>
           <h4>2. Upload your short essay (1000 words or less) to <a href="https://www.dropbox.com/request/eYwWguObpUo9SSRywAol">Dropbox</a></h4>
-          <h2>You will be notified about your acceptance to the workshop on December 20th</h4>          
+          <p>You will be notified about your acceptance to the workshop on <mark>December 20th</mark>. For any questions about the
+            workshop or to share ideas with the organizing committee, please contact
+            <a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">Brian McInnis</a>.</p>
         </div>      
       </div>
     </div>
