--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             around crowd-civic systems for law and policy.</p>
           <h3>Relevant links:</h3>
           <ul>
-            <li><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1">Apply to participate in the Crowdsourcing Law and Policy Workshop</a></li>
+            <li><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">Apply to participate in the Crowdsourcing Law and Policy Workshop</a></li>
             <li><a href="https://CrowdCivicSystems.github.io/CSCW2017WS-CrowdCivicSystems.pdf" target="_blank">Download the workshop proposal</a></li>            
             <li><a href="https://cscw.acm.org/2017/" target="_blank">About CSCW 2017</a></li>
           </ul>
@@ -66,8 +66,8 @@
       <div id="apply" class="row">
         <div class="col-md-8 col-offset-md-2">
           <h2>Apply to participate in the workshop</h2>
-          <h4>1. Complete the application <a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1">form</a></h4>
-          <h4>2. Upload your short essay (1000 words or less) to <a href="https://www.dropbox.com/request/eYwWguObpUo9SSRywAol">Dropbox</a></h4>
+          <h4>1. Complete the application <a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">form</a></h4>
+          <h4>2. Upload your short essay (1000 words or less) to <a href="https://www.dropbox.com/request/eYwWguObpUo9SSRywAol" target="_blank">Dropbox</a></h4>
           <p>You will be notified about your acceptance to the workshop on <mark>December 20th</mark>. For any questions about the
             workshop or to share ideas with the organizing committee, please contact
             <a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">Brian McInnis</a>.</p>
