--- a/index.html
+++ b/index.html
@@ -66,12 +66,22 @@
       <div id="apply" class="row">
         <div class="col-md-8 col-offset-md-2">
           <h2>Apply to participate in the workshop</h2>
-          <h4>1. Complete the application <a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">form</a></h4>
-          <h4>2. Upload your short essay (1000 words or less) to <a href="https://www.dropbox.com/request/eYwWguObpUo9SSRywAol" target="_blank">Dropbox</a></h4>
+          <p>We plan to recruit about 25 participants who have undertaken or are interested in pursuing research and/or practice
+            related to crowd-civic systems and online collective action for policy change.</p>
+          <ol>
+            <li>Complete the application <a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">form</a></li>
+            <li>Upload your short essay (1000 words or less) to <a href="https://www.dropbox.com/request/eYwWguObpUo9SSRywAol" target="_blank">Dropbox</a></li>
+          </ol>
           <p>You will be notified about your acceptance to the workshop on <mark>December 20th</mark>. For any questions about the
             workshop or to share ideas with the organizing committee, please contact
-            <a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">Brian McInnis</a>.</p>
+            <a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">Brian McInnis</a>.</p>          
         </div>      
+      </div>
+      <div id="committee" class="row">
+        <div class="col-md-8 col-offset-md-2">
+          <h2>Workshop organizing committee</h2>
+          
+        </div>
       </div>
     </div>
   </body>
