--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             opportunities and challenges of crowd-civic systems to develop best practices for increasing public engagement with 
             law and policy. The workshop organizers will suggest an initial framework explicitly intended to be criticized by 
             participants and reconfigured through a series of iterative cooperative small-group activities focusing on 
-            ``diagnosing'' the failures of past crowd-civic system efforts and the successes of online action around social 
+            <i>diagnosing</i> the failures of past crowd-civic system efforts and the successes of online action around social 
             issues. While the ultimate objective of the workshop is to develop a best practices guide, we see iterations on 
             the guide as a mechanism for fostering community and collaboration among policymakers, technologists, and researchers 
             around crowd-civic systems for law and policy.</p>
@@ -80,7 +80,14 @@
       <div id="committee" class="row">
         <div class="col-md-8 col-offset-md-2">
           <h2>Workshop organizing committee</h2>
-          
+          <ul>
+            <li><a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">Brian McInnis</a></li>
+            <li>Alissa Centivany</li>
+            <li>Juho Kim</li>
+            <li>Marta Poblet</li>
+            <li>Karen Levy</li>
+            <li>Gilly Leshed</li>
+          </ul>
         </div>
       </div>
     </div>
