--- a/index.html
+++ b/index.html
@@ -21,14 +21,10 @@
             crowdsourcing to contexts including constitutional reform, drafting federal bills, and generating local policies. 
             However, crowd-civic systems also come with challenges and risks such as socio-technical barriers, marginalization 
             of specific groups, silencing of interests, etc.</p>
-          <p>Using a design-thinking approach, this workshop will address both 
-            opportunities and challenges of crowd-civic systems to develop best practices for increasing public engagement with 
-            law and policy. The workshop organizers will suggest an initial framework explicitly intended to be criticized by 
-            participants and reconfigured through a series of iterative cooperative small-group activities focusing on 
-            <i>diagnosing</i> the failures of past crowd-civic system efforts and the successes of online action around social 
-            issues. While the ultimate objective of the workshop is to develop a best practices guide, we see iterations on 
-            the guide as a mechanism for fostering community and collaboration among policymakers, technologists, and researchers 
-            around crowd-civic systems for law and policy.</p>
+          <p>Participants in this workshop will apply a design-thinking approach to conceptualize the future of crowd-civic systems:
+            (1) what the public can accomplish, identifying best practices, e.g., risks, strategies for evaluation, (2) how people
+            (from policymakers to stakeholder interest groups) value in system processes and outcomes, and (3) when crowdsourcing 
+            law and policy poses more risk than potential value.</p>
           <h3>Relevant links:</h3>
           <ul>
             <li><mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">Apply to participate in the Crowdsourcing Law and Policy Workshop</a></mark></li>
@@ -61,6 +57,59 @@
             developing a best practices guide for crowd-civic system design and research, drawing from both the public and private
             spheres, in an effort to promote crowdsourcing as an adaptive, viable, robust, and reliable tool for civic engagement.
           </p>
+        </div>
+      </div>
+      <div id="activities" class="row">
+        <div class="col-md-8 col-offset-md-2">
+          <h2>Tentative schedule of workshop activities</h2>
+          <p>The workshop will be a full-day of exploration into the critical design of crowd civic systems. The first part of 
+            the day includes activities toward reaching a common ground around conceptualization of crowd-civic systems for 
+            law and policy. The second part of the day includes activities toward identifying best practices in design, 
+            research, and application of such systems.</p>
+          <table class="table table-hover">
+            <tr>
+              <th></th>
+              <th>Event</th>
+            </tr>
+            <tr>
+              <td>09:00-09:30 AM</td>
+              <td>Introduction and Orientation</td>
+            </tr>
+            <tr>
+              <td>09:30-10:30 AM</td>
+              <td>2-3 minute participant <i>boasters</i></td>
+            </tr>
+            <tr>
+              <td>10:30-11:00 AM</td>
+              <td>Keynote talk about crowd-civic systems</td>
+            </tr>
+            <tr>
+              <td>11:00-12:00 PM</td>
+              <td>Definitions and Theoretical Frameworks</td>
+            </tr>
+            <tr>
+              <td>12:00-01:00 PM</td>
+              <td>Lunch and discovering participant viewpoints</td>
+            </tr>
+            <tr>
+              <td>01:00-02:30 PM</td>
+              <td>System Barriers, Failures and Controversies</td>
+            </tr>
+            <tr>
+              <td>02:30-04:00 PM</td>
+              <td>Online Collective Action for Policy Change</td>
+            </tr>
+            <tr>
+              <td>04:00-04:45 PM</td>
+              <td>Synthesis and the Way Forward</td>
+            </tr>            
+            <tr>
+              <td>04:45-05:00 PM</td>
+              <td>Call to Action and Closing Remarks</td>
+            </tr>            
+          <table>
+          <p>During the conclusion, we will synthesize our findings through an<i>in-situ</i> and in <i>real-time</i>
+            crowdsourcing of the best practices guidebook. Please see the workshop proposal for more details.</p>
         </div>
       </div>
       <div id="apply" class="row">
