--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-offset-md-2">
-          <h1>Crowdsourcing Law and Policy</h1>
-          <h2><small>A Design-Thinking Approach to Crowd-Civic Systems</small></h2>
+          <h1>Crowdsourcing Law and Policy<br /><small>A Design-Thinking Approach to Crowd-Civic Systems</small></h1>
           <p>We invite you to <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">participate</a></mark> in a Computer Supported Cooperative Work (CSCW) 2017 Workshop 
             designed to explore the risks and evaluation strategies for crowdsourcing law and policy. Crowdsourcing 
             technologies, strategies and methods offer new opportunities for bridging existing gaps among law, policymaking, 
@@ -107,7 +106,7 @@
               <td>04:45-05:00 PM</td>
               <td>Call to Action and Closing Remarks</td>
             </tr>            
-          <table>
+          </table>
           <p>During the conclusion, we will synthesize our findings through an<i>in-situ</i> and in <i>real-time</i>
             crowdsourcing of the best practices guidebook. Please see the workshop proposal for more details.</p>
         </div>
@@ -117,7 +116,7 @@
           <h2>Apply to participate in the workshop</h2>
           <p>We plan to recruit about 25 participants who have undertaken or are interested in pursuing research and/or practice
             related to crowd-civic systems and online collective action for policy change.</p>
-          <h2>To participate, please complete an <a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">application</a></h2>
+          <p class="text-center">To participate, please complete an <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">application</a></mark></p>
           <p>You will be notified about your acceptance to the workshop on <mark>December 20th</mark>. For any questions about the
             workshop or to share ideas with the organizing committee, please contact
             <mark><a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">Brian McInnis</a></mark>.</p>          
