--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <h2>Apply to participate in the workshop</h2>
           <p>We plan to recruit about 25 participants who have undertaken or are interested in pursuing research and/or practice
             related to crowd-civic systems and online collective action for policy change.</p>
-          <p class="text-center">To participate, please complete an <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">application</a></mark></p>
+          <p>To participate, please complete an <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">application</a></mark></p>
           <p>You will be notified about your acceptance to the workshop on <mark>December 20th</mark>. For any questions about the
             workshop or to share ideas with the organizing committee, please contact
             <mark><a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">Brian McInnis</a></mark>.</p>          
