--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
         <div class="col-md-8 col-offset-md-2">
           <h2>Workshop organizing committee</h2>
           <ul>
-            <li><a href="http://infosci.cornell.edu/forward-thinking-people/phds/brian-mcinnis">Brian McInnis</a> (<a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">email</a>)</li>
-            <li><a href="http://www.fims.uwo.ca/people/profiles/alissa_centivany.html">Alissa Centivany</a></li>
-            <li><a href="http://juhokim.com/">Juho Kim</a></li>
-            <li><a href="https://www.rmit.edu.au/research/research-expertise/our-reputation/people/meet-our-academics/vicechancellors-senior-research-fellows/2012/dr-marta-poblet-balcell">Marta Poblet</a></li>
-            <li><a href="http://infosci.cornell.edu/faculty/karen-levy">Karen Levy</a></li>
-            <li><a href="http://leshed.infosci.cornell.edu/">Gilly Leshed</a></li>
+            <li><a href="http://infosci.cornell.edu/forward-thinking-people/phds/brian-mcinnis" target="_blank">Brian McInnis</a> (<a href="mailto:bjm277@cornell.edu?Subject=CSCW-CrowdCivicSystems-Question" target="_blank">email</a>)</li>
+            <li><a href="http://www.fims.uwo.ca/people/profiles/alissa_centivany.html" target="_blank">Alissa Centivany</a></li>
+            <li><a href="http://juhokim.com/" target="_blank">Juho Kim</a></li>
+            <li><a href="https://www.rmit.edu.au/research/research-expertise/our-reputation/people/meet-our-academics/vicechancellors-senior-research-fellows/2012/dr-marta-poblet-balcell" target="_blank">Marta Poblet</a></li>
+            <li><a href="http://infosci.cornell.edu/faculty/karen-levy" target="_blank">Karen Levy</a></li>
+            <li><a href="http://leshed.infosci.cornell.edu/" target="_blank">Gilly Leshed</a></li>
           </ul>
         </div>
       </div>
