--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Crowd Civic Systems | Crowdsourcing Law and Policy</title>
+    <title>CSCW 2017 Workshop | Crowdsourcing Law and Policy</title>
     <script id="jquery" type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script id="underscore" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <!-- Latest compiled and minified CSS -->
@@ -12,8 +12,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-offset-md-2">
-          <h1>Crowdsourcing Law and Policy<br /><small>A Design-Thinking Approach to Crowd-Civic Systems</small></h1>
-          <p>We invite you to <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">participate</a></mark> in a Computer Supported Cooperative Work (CSCW) 2017 Workshop 
+          <h1>CSCW 2017 Workshop on Crowdsourcing Law and Policy<br /><small>A Design-Thinking Approach to Crowd-Civic Systems</small></h1>
+          <p>We invite you to <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">participate</a></mark> in a <mark><a href="https://cscw.acm.org/2017/" target="_blank">Computer Supported Cooperative Work (CSCW) 2017 Workshop</a></mark> 
             designed to explore the risks and evaluation strategies for crowdsourcing law and policy. Crowdsourcing 
             technologies, strategies and methods offer new opportunities for bridging existing gaps among law, policymaking, 
             and the lived experience of citizens. In recent years, a number of initiatives across the world have applied 
