--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>CSCW 2017 Workshop | Crowdsourcing Law and Policy</title>
+    <title>Crowdsourcing Law and Policy</title>
     <script id="jquery" type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script id="underscore" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <!-- Latest compiled and minified CSS -->
