--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">  
+    <style>
+      .header-bar{
+        position:absolute;
+        top: 0;
+        background-color: #337ab7;
+        width: auto;
+        height: 1px;
+      };
+      .footer-bar{
+        background-color: #337ab7;
+        position:absolute;
+        bottom: 0;
+        width: auto;
+        height: 1px;
+      };
+    </style>
   </head>
   <body>
+    <div class="header-bar"></div>
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-offset-md-2">
@@ -136,5 +153,6 @@
         </div>
       </div>
     </div>
+    <div class="footer-bar"></div>
   </body>
 </html>
