--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <style>
       .header-bar{
         position:absolute;
-        top: 0;
+        top: 10;
         background-color: #337ab7;
-        width: auto;
-        height: 10px;
+        width: 100%;
+        height: 100px;
       };
       .footer-bar{
         background-color: #337ab7;
         position:absolute;
-        bottom: 0;
-        width: auto;
-        height: 10px;
+        bottom: 10;
+        width: 100%;
+        height: 100px;
       };
     </style>
   </head>
