--- a/index.html
+++ b/index.html
@@ -7,22 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">  
-    <style>
-      .header-bar{
-        position:absolute;
-        top: 10;
-        background-color: #337ab7;
-        width: 100%;
-        height: 100px;
-      };
-      .footer-bar{
-        background-color: #337ab7;
-        position:absolute;
-        bottom: 10;
-        width: 100%;
-        height: 100px;
-      };
-    </style>
   </head>
   <body>
     <div class="header-bar"></div>
@@ -155,4 +139,20 @@
     </div>
     <div class="footer-bar"></div>
   </body>
+  <style>
+    .header-bar{
+      position:absolute;
+      top: 10px;
+      background-color: #337ab7;
+      width: 100%;
+      height: 100px;
+    };
+    .footer-bar{
+      background-color: #337ab7;
+      position:absolute;
+      bottom: 10px;
+      width: 100%;
+      height: 100px;
+    };
+  </style>  
 </html>
