--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
     };
     .footer-bar{
       background-color: #337ab7;
-      position:absolute;
-      bottom: -10px;
+      position:relative;
       width: 100%;
       height: 100px;
     };
