--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
       height: 100px;
     };
     .footer-bar{
+      position: static;
       background-color: #337ab7;
-      position:relative;
       width: 100%;
       height: 100px;
     };
