--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
   </body>
   <style>
     .header-bar{
-      position:absolute;
-      top: 10px;
+      position:static;
       background-color: #337ab7;
       width: 100%;
       height: 100px;
