--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col-md-8 col-offset-md-2">
           <h1>Crowdsourcing Law and Policy<br /><small>CSCW 2017 Workshop on Crowd-Civic Systems</small></h1>
-          <p>We invite you to <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">participate</a></mark> in a <mark><a href="https://cscw.acm.org/2017/" target="_blank">Computer Supported Cooperative Work (CSCW) 2017 Workshop</a></mark> 
+          <p>We invite you to <mark><a href="https://goo.gl/forms/zpAQMkyZjAe53mwj1" target="_blank">participate</a></mark> in a Computer Supported Cooperative Work (CSCW) <mark><a href="https://cscw.acm.org/2017/" target="_blank">2017 Workshop</a></mark> 
             designed to explore the risks and evaluation strategies for crowdsourcing law and policy. Crowdsourcing 
             technologies, strategies and methods offer new opportunities for bridging existing gaps among law, policymaking, 
             and the lived experience of citizens. In recent years, a number of initiatives across the world have applied 
